# wewa

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  builtins.json  clippy.toml  octagrams.shader
.github/workflows/: release.yml
gnome-extension/wewa-wallpaper@priceless.dev/: extension.js  metadata.json
shaders/: 2dclouds.shader  accretion.shader  arknights_polyhedrons.shader  ascend.shader  auroras.shader  chillywave2.shader  chillywaves.shader  classic4colors.shader  clouds.shader  crumpledwave.shader  darktransit.shader  forknixietubeclock.shader  hexagonalgrid.shader  hexneonlove.shader  hieroglyphs.shader  iceandfire.shader  linuxwallpaper.shader  montereywannabe.shader  mouseoffsetmandelbrot.shader  pattern005_minimax.shader  pinkvoid.shader  plasma.shader  plasmawaves.shader  proteanclouds.shader  ps3xmb.shader  seventymelt.shader  singularity.shader  spiralgalaxy.shader  starnest.shader  starshipreentry.shader  synthwavecanyon.shader  tilewarppt3.shader  tumblerock.shader  undulatingurchin.shader  voronoigradient.shader  wadongmo759.shader  waveymc.shader
specs/001-rust-webwallpaper-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rust-webwallpaper-cli/checklists/: requirements.md
specs/001-rust-webwallpaper-cli/contracts/: cli.md
specs/002-wgpu-shader-renderer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-wgpu-shader-renderer/checklists/: requirements.md
specs/002-wgpu-shader-renderer/contracts/: cli-contract.md
src/: builtin.rs  cli.rs  config.rs  display.rs  ipc.rs  main.rs  server.rs  shader.rs  wallpaper.rs
src/platform/: mod.rs
src/platform/linux/: display.rs  mod.rs  wallpaper.rs
src/platform/macos/: display.rs  mod.rs  wallpaper.rs
src/platform/windows/: display.rs  mod.rs  wallpaper.rs
src/renderer/: mod.rs  pipeline.rs  shader.rs  uniforms.rs
