[package]
name = "webwallpaper"
version = "0.1.0"
edition = "2021"
description = "Display web content as desktop wallpaper"
license = "MIT"
authors = ["WebWallpaper Contributors"]
repository = "https://github.com/user/webwallpaper"
keywords = ["wallpaper", "webview", "desktop", "cli"]
categories = ["command-line-utilities", "gui"]

[dependencies]
# Webview rendering - use compatible versions
wry = "0.44"
tao = "0.30"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Inter-process communication
interprocess = "2"

# Local HTTP server for file serving
tiny_http = "0.12"

# Serialization for config/instance files
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time for instance tracking
chrono = { version = "0.4", features = ["serde"] }

# Cross-platform utilities
dirs = "5"

# Ctrl+C signal handling
ctrlc = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_System_LibraryLoader"
]}

[profile.release]
opt-level = 3
lto = true
strip = true
