[package]
name = "webwallpaper"
version = "0.2.0"
edition = "2021"
description = "Display web content as desktop wallpaper"
license = "MIT"
authors = ["WebWallpaper Contributors"]
repository = "https://github.com/user/webwallpaper"
keywords = ["wallpaper", "webview", "desktop", "cli"]
categories = ["command-line-utilities", "gui"]

[dependencies]
# Webview rendering - use compatible versions
wry = "0.44"
tao = "0.30"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Inter-process communication
interprocess = "2"

# Local HTTP server for file serving
tiny_http = "0.12"

# Serialization for config/instance files
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time for instance tracking
chrono = { version = "0.4", features = ["serde"] }

# Cross-platform utilities
dirs = "5"

# Ctrl+C signal handling
ctrlc = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_System_LibraryLoader"
]}

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
core-graphics = "0.24"

[target.'cfg(target_os = "linux")'.dependencies]
gdk = { version = "0.18", features = ["v3_24"] }
glib = "0.18"
gtk = { version = "0.18", features = ["v3_24"] }
gtk-layer-shell = { version = "0.8.2", features = ["v0_6"] }

[profile.release]
opt-level = 3
lto = true
strip = true
